[tool.poetry]
name = "probe_internet"
version = "0.1.0"
description = ""
authors = ["Michael Merickel <michael@merickel.org>"]

[tool.poetry.dependencies]
python = "^3.7"

humanize = "*"
toml = "*"
twilio = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
